--- a/app/source/html/activities/prototypeContractServiceEditor.html
+++ b/app/source/html/activities/prototypeContractServiceEditor.html
@@ -1,5 +1,5 @@
-<!-- Activity mockupHouseSitterServiceEditor -->
-<div data-activity="mockupHouseSitterServiceEditor" class="Boxes-sm animated">
+<!-- Activity prototypeHouseCleanerServiceEditor -->
+<div data-activity="prototypeContractServiceEditor" class="Boxes-sm animated">
     <app-inline-user-menu>@render('parts/UserMenuContents.html')</app-inline-user-menu>
     <div class="container">
         <div class="row">  
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div style="margin: 15px">
-                            <label>How many dogs?</label>
+                            <label>Bedrooms</label>
                             <div class="row">
                             <label class="btn btn-default">
                                 <span>1</span>
@@ -82,85 +82,130 @@
                                 <span>3</span>
                             </label>
                             <label class="btn btn-default">
+                                <span>4</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>5</span>
+                            </label>
+                            <label class="btn btn-default">
                                 <span>More</span>
                             </label>
                             </div>
                             
                         </div>
                         <div style="margin: 15px">
-                            <label>Information about each dog:</label>
+                            <label>Bathrooms</label>
                             <div class="row">
-                            <span class="col-xs-12 col-sm-5 form-group">
-                                <label class="control-label sr-only">Dog 1 Name</label>
-                                <div class="input-group">
-                                    <input id="serviceProfessionalServiceEditor-durationHours" type="text" class="form-control"/>
-                                </div>
-                            </span>
                             <label class="btn btn-default">
-                                <span>Age </span><span class="caret"></span>
+                                <span>1</span>
                             </label>
                             <label class="btn btn-default">
-                                <span>Weight </span><span class="caret"></span>
+                                <span>2</span>
                             </label>
                             <label class="btn btn-default">
-                                <span>Breed </span><span class="caret"></span>
+                                <span>3</span>
                             </label>
                             <label class="btn btn-default">
-                                <span>Special needs</span>
+                                <span>4</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>5</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>More</span>
                             </label>
                             </div>
                             </div>
                         <div style="margin: 15px">
-                            <label>Frequency of walks</label>
-                            <div class="row">
-                            <select class="btn btn-default">
-                                <option>Daily </option>
-                                <option>Twice daily </option>
-                                <option>Once weekly </option>
-                                <option>One time </option>
-                                <option>Custom </option>
-                            </select>
-                            </div>
-                            </div>
-                        <div style="margin: 15px">
-                            <label>Add to pack:</label>
+                            <label>Floors</label>
                             <div class="row">
                             <label class="btn btn-default">
-                                <span>None </span><span class="caret"></span>
+                                <span>1</span>
                             </label>
-                            </div>
-                            </div>
-                        <div style="margin: 15px">
-                            <label>Length of walk:</label>
-                            <div class="row">
                             <label class="btn btn-default">
-                                <span>15 minutes </span><span class="caret"></span>
+                                <span>2</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>3</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>4</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>5</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>More</span>
                             </label>
                             </div>
                             </div>
                         <div style="margin: 15px">
-                            <label>Additional services:</label>
+                            <label>Estimated square footage</label>
                             <div class="row">
-                            <label>
-                                <span>Dog 1</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Feeding</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Baths</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Grooming</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Medication</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Other</span>
-                            </label>
+                                <span class="col-xs-12 col-sm-5 form-group">
+                                    <label class="control-label sr-only">Sq Feet</label>
+                                    <div class="input-group">
+                                        <input id="serviceProfessionalServiceEditor-durationHours" type="number" class="form-control"/>
+                                        <span class="input-group-addon">sq feet</span>
+                                    </div>
+                                </span>
                             </div>
                         </div>
+                        <div style="margin: 15px">
+                            <label>Pets</label>
+                            <div class="row">
+                            <label class="btn btn-default">
+                                <span>Dog(s)</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Cat(s)</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Fish</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Reptile(s)</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Bird(s)</span>
+                            </label>
+                            </div>
+                            </div>
+                        <div style="margin: 15px">
+                            <label>Included</label>
+                            <div class="row"> 
+                            <label class="btn btn-default">
+                                <span>Appliance wipedowns</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Bathroom cleaning</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Bed making</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Cabinet cleaning</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Dusting</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Mopping</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Sweeping</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Vacuuming</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Cleaning products</span>
+                            </label>
+                            <label class="btn btn-default">
+                                <span>Add new <i class="fa fa-fw ion-plus"></i></span>
+                            </label>
+                            </div>
+                            </div>
                         <div class="form-group">
                             <label class="control-label"><span>Description</span></label>
                             <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number">
