--- a/app/source/html/activities/prototypeRateEditor.html
+++ b/app/source/html/activities/prototypeRateEditor.html
@@ -1,5 +1,5 @@
-<!-- Activity mockupHouseCleanerServiceEditor -->
-<div data-activity="mockupServiceEditor" class="Boxes-sm animated">
+<!-- Activity prototypeHouseCleanerServiceEditor -->
+<div data-activity="prototypeRateEditor" class="Boxes-sm animated">
     <app-inline-user-menu>@render('parts/UserMenuContents.html')</app-inline-user-menu>
     <div class="container">
         <div class="row">  
