--- a/app/source/html/activities/prototypeMeetAndGreet.html
+++ b/app/source/html/activities/prototypeMeetAndGreet.html
@@ -13,15 +13,15 @@
             <div class="col-md-7 col-sm-reset">
                 <form class="container-fluid LightForm" role="form">
                     <h2 class="SectionTitle">
-                        <span>Add a new Psychotherapist consultation</span>
+                        <span>Add a new Dog Walker meet and greet</span>
                     </h2>                       
                     <div class="form-inline isolated">
                         <label>What will clients be booking?</label>
-                        <input type="text" class="form-control" placeholder="Type the name of the consultation, e.g. New client consultation"> 
+                        <input type="text" class="form-control" placeholder="e.g. Dog Meet and Greet"> 
                     </div>
                     <div class="LightForm-Section">
                         <div class="row">
-                            <label>Who can book this consultation?</label>
+                            <label>Who can book this meet and greet?</label>
                             <div class="Select Select-block">
                                 <select class="select-unstyled selectpicker">
                                          <option value="1">First-time clients only</option>
@@ -41,7 +41,7 @@
                     </div>
                     <div class="LightForm-Section">
                         <div class="row">
-                            <label>Where can this consulation be booked?</label>
+                            <label>Where can this meet and greet be booked?</label>
                             <div class="Select Select-block">
                                 <select class="select-unstyled selectpicker">
                                     <optgroup label="My service locations">
@@ -64,7 +64,7 @@
                     </div>
                     <div class="form-inline isolated">
                         <div class="form-group">
-                            <label class="control-label">What's the price for this consultation?</label>
+                            <label class="control-label">What's the price for this meet and greet?</label>
                             <div class="input-group">
                                 <span class="input-group-addon">$</span>
                                     <input id="serviceProfessionalServiceEditor-price" type="number" class="form-control" min="0" step=".01" placeholder="0.00"/>
@@ -72,7 +72,7 @@
                         </div>
                     </div> 
                         <div class="form-inline isolated">
-                            <label class="control-label">How much time will the service take?</label>
+                            <label class="control-label">How much time will the meet and greet take?</label>
                             <div class="row">
                                 <span class="col-xs-12 col-sm-5 form-group">
                                     <label class="control-label sr-only">Hours</label>
@@ -91,8 +91,8 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label"><span>What can clients expect during the consultation?</span></label>
-                            <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="Describe the Pyschotherapist services you'll provide">
+                            <label class="control-label"><span>What can clients expect during the meet and greet?</span></label>
+                            <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="Include anything the client needs to prepare for the meet and greet.">
                             </textarea>
                         </div>  
                     <div class="row">
@@ -106,7 +106,7 @@
                             <label for="serviceProfessionalServiceEditor-priceRateUnit" class="control-label sr-only">per</label>
                             <div class="input-group"> 
                                 <span class="input-group-addon">per</span> 
-                                <input id="serviceProfessionalServiceEditor-priceRateUnit" class="form-control" placeholder="session">
+                                <input id="serviceProfessionalServiceEditor-priceRateUnit" class="form-control" placeholder="walk">
                             </div>
                         </div>
                         <div class="col-xs-12">
@@ -117,11 +117,13 @@
                                 </label>
                             </div>
                             <!--if isHipaa-->
+<!--
                             <div class="checkbox">
                                 <label>
                                     <input type="checkbox"> <span>I offer sliding scale rates</span>  
                                 </label>
                             </div>
+-->
                         </div>
                     </div> 
                     <div class="LightForm-submitBar">
