--- a/app/source/html/activities/prototypePetSitterServiceEditor.html
+++ b/app/source/html/activities/prototypePetSitterServiceEditor.html
@@ -13,166 +13,129 @@
             <div class="col-md-7 col-sm-reset">
                 <form class="container-fluid LightForm" role="form">
                     <h2 class="SectionTitle">
-                        <span>Service for Joshua</span>
-                        <span class="pull-right hidden-xs hidden-sm"><a class="hidden-xs hidden-sm" href="https://loconomics.com/#!/help/relatedArticles/201967166-listing-and-pricing-your-services" target="_blank">Help <i class="fa fa-fw ion-ios-help-outline"></i></a>
-                        </span>
-                    </h2>
-                    <div>
-                        <div style="margin: 15px">
-                            <label>What would you like to create?</label>
+                        <span>Add a new Dog Sitter service</span>
+                    </h2>                       
+                    <div class="form-inline isolated">
+                        <label>What will clients be booking?</label>
+                        <input type="text" class="form-control" placeholder="e.g. Daily Dog Sitting">
+                    </div>
+                        <div class="LightForm-Section">
                             <div class="row">
-                                <label class="btn btn-default">
-                                    <span>Appointment</span>
-                                </label>
-                                <label class="btn btn-default">
-                                    <span>Estimate</span>
-                                </label>
-                                <label class="btn btn-default">
-                                    <span>Invoice</span>
-                                </label>
-                                <label class="btn btn-default">
-                                    <span>Receipt</span>
-                                </label>
-                            </div>
-                        </div>
-                            
-                        <div class="form-inline isolated">
-                            <div class="form-group">
-                                <input type="text" class="form-control" style="width: 500px;" placeholder="Type the name of the service">
-                            </div>                    
-                        </div>
-                        <div class="form-inline isolated">
-                            <div class="form-group">
-                                <label class="control-label">Price</label>
-                                <div class="input-group">
-                                    <span class="input-group-addon">$</span>
-                                    <input id="serviceProfessionalServiceEditor-price" type="number" class="form-control"/>
+                            <label>Who can book this service?</label>
+                                <div class="Select Select-block ">
+                                    <select class="select-unstyled selectpicker">
+                                         <option value="3">Anyone</option>
+                                         <option value="1">First-time clients only</option>
+                                         <option value="2">Existing clients only</option>
+                                         <option value="4">Certain clients only</option>
+                                    </select>
                                 </div>
                             </div>
                         </div>
-                        <div style="margin: 15px">
-                            <label>Duration</label>
+                        <div class="LightForm-Section">
+                            <div class="row">
+                            <label>Which clients?</label>
+                                <div class="Select Select-block ">
+                                    <select class="select-unstyled selectpicker">
+                                            <option value="4">Joshua Danielson's dog Fido</option>
+                                            <option value="5">Joshua Danielson's dog Buster</option>
+                                            <option value="6">Juan Sanchez's dog Rover</option>
+                                            <option value="6">Add new dog</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="LightForm-Section">
+                            <div class="row">
+                                <label>Where can this service be booked?</label>
+                                    <div class="Select Select-block ">
+                                        <select class="select-unstyled selectpicker">
+                                            <optgroup label="My service areas">
+                                             <option value="2">5.0 miles from 94110</option>
+                                             <option value="2">Add new service area</option>
+                                            </optgroup>
+                                        </select>
+                                    </div>
+                            </div>
+                        </div>
+                        <div class="form-inline isolated">
+                            <div class="form-group">
+                                <label class="control-label">What's the price?</label>
+                                <div class="input-group">
+                                    <span class="input-group-addon">$</span>
+                                        <input id="serviceProfessionalServiceEditor-price" type="number" class="form-control" min="0" step=".01" placeholder="0.00"/>
+                                </div>
+                            </div>
+                        </div>  
+                        <div class="form-inline isolated">
+                            <label class="control-label">How much time will the meet and greet take?</label>
                             <div class="row">
                                 <span class="col-xs-12 col-sm-5 form-group">
                                     <label class="control-label sr-only">Hours</label>
                                     <div class="input-group">
-                                        <input id="serviceProfessionalServiceEditor-durationHours" type="number" class="form-control"/>
+                                        <input id="serviceProfessionalServiceEditor-durationHours" type="number" class="form-control" min="0" step="1" placeholder="1"/>
                                         <span class="input-group-addon">hours</span>
                                     </div>
                                 </span>
                                 <span class="col-xs-12 col-sm-offset-1 col-sm-5 form-group">
                                     <label class="control-label sr-only">Minutes</label>
                                     <div class="input-group">
-                                        <input id="serviceProfessionalServiceEditor-durationMinutes" type="number" class="form-control"/>
+                                        <input id="serviceProfessionalServiceEditor-durationMinutes" type="number" class="form-control" min="0" step="15" placeholder="0"/>
                                         <span class="input-group-addon">minutes</span>
                                     </div>
                                 </span>
                             </div>
                         </div>
-                        <div style="margin: 15px">
-                            <label>How many dogs?</label>
+                        <div class="LightForm-Section">
                             <div class="row">
-                            <label class="btn btn-default">
-                                <span>1</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>2</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>3</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>More</span>
-                            </label>
-                            </div>
-                            
-                        </div>
-                        <div style="margin: 15px">
-                            <label>Information about each dog:</label>
-                            <div class="row">
-                            <span class="col-xs-12 col-sm-5 form-group">
-                                <label class="control-label sr-only">Dog 1 Name</label>
-                                <div class="input-group">
-                                    <input id="serviceProfessionalServiceEditor-durationHours" type="text" class="form-control"/>
+                                <label>What's the maximum number of dogs included in the price?</label>
+                                <div class="Select Select-block ">
+                                    <select class="select-unstyled selectpicker">
+                                         <option value="1">1 dog</option>
+                                         <option value="2">2 dogs</option>
+                                         <option value="3">3 dogs</option>
+                                         <option value="4">4 dogs</option>
+                                    </select>
                                 </div>
-                            </span>
-                            <label class="btn btn-default">
-                                <span>Age </span><span class="caret"></span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Weight </span><span class="caret"></span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Breed </span><span class="caret"></span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Special needs</span>
-                            </label>
-                            </div>
-                            </div>
-                        <div style="margin: 15px">
-                            <label>Frequency of walks</label>
-                            <div class="row">
-                            <select class="btn btn-default">
-                                <option>Daily </option>
-                                <option>Twice daily </option>
-                                <option>Once weekly </option>
-                                <option>One time </option>
-                                <option>Custom </option>
-                            </select>
-                            </div>
-                            </div>
-                        <div style="margin: 15px">
-                            <label>Add to pack:</label>
-                            <div class="row">
-                            <label class="btn btn-default">
-                                <span>None </span><span class="caret"></span>
-                            </label>
-                            </div>
-                            </div>
-                        <div style="margin: 15px">
-                            <label>Length of walk:</label>
-                            <div class="row">
-                            <label class="btn btn-default">
-                                <span>15 minutes </span><span class="caret"></span>
-                            </label>
-                            </div>
-                            </div>
-                        <div style="margin: 15px">
-                            <label>Additional services:</label>
-                            <div class="row">
-                            <label>
-                                <span>Dog 1</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Feeding</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Baths</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Grooming</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Medication</span>
-                            </label>
-                            <label class="btn btn-default">
-                                <span>Other</span>
-                            </label>
                             </div>
                         </div>
                         <div class="form-group">
-                            <label class="control-label"><span>Description</span></label>
-                            <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number">
+                            <label class="control-label">What services are included?</label>
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Select suggested or add new" > 
+                                <span class="input-group-btn">
+                                <button type="button" class="btn btn-default"><i class="fa ion ion-arrow-down-b" aria-hidden="true"></i><span class="sr-only">Show all</span>
+                                </button>
+                                </span>
+                            </div>                        
+                            <ol class="TagsList" >
+                              <li class="TagsList-item"> <span>Walks</span>
+
+                                <button type="button" class="btn btn-link" > <i class="fa ion ion-ios-close-outline" aria-hidden="true"></i>  <span class="sr-only">Remove</span>
+
+                                </button>
+                              </li>
+
+                              <li class="TagsList-item"> <span>Feeding</span>
+
+                                <button type="button" class="btn btn-link" > <i class="fa ion ion-ios-close-outline" aria-hidden="true"></i>  <span class="sr-only">Remove</span>
+
+                                </button>
+                              </li>
+
+                              <li class="TagsList-item"> <span>Watering</span>
+
+                                <button type="button" class="btn btn-link" > <i class="fa ion ion-ios-close-outline" aria-hidden="true"></i>  <span class="sr-only">Remove</span>
+
+                                </button>
+                              </li>
+                            </ol>
+                    </div>
+                        <div class="form-group">
+                            <label class="control-label"><span>Anything else?</span></label>
+                            <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="Describe to the client anything else you'll provide.">
                             </textarea>
                         </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"/>
-                                <span>Make this service available to all clients</span>
-                            </label>
-                        </div>
-                    </div>
                     <div class="LightForm-submitBar">
                         <button type="submit" class="btn btn-primary btn-block">Save</button>
                     </div>       
