--- a/app/source/html/activities/prototypeMeetAndGreet.html
+++ b/app/source/html/activities/prototypeMeetAndGreet.html
@@ -17,8 +17,9 @@
                     </h2>                       
                     <div class="form-inline isolated">
                         <label>What will clients be booking?</label>
-                        <input type="text" class="form-control" placeholder="e.g. Dog Meet and Greet"> 
+                        <input type="text" class="form-control" value="Dog Meet and Greet"> 
                     </div>
+<!--
                     <div class="LightForm-Section">
                         <div class="row">
                             <label>Who can book this meet and greet?</label>
@@ -28,7 +29,6 @@
                                          <option value="3">Anyone</option>
                                 </select>
                             </div>
-<!--
                                 <div class="select select-block ">
                                     <select class="select-unstyled selectpicker">
                                             <option value="4">Joshua Danielson</option>
@@ -36,9 +36,9 @@
                                             <option value="6">Juan Sanchez</option>
                                     </select>
                                 </div>
--->
                         </div>
                     </div>
+-->
                     <div class="LightForm-Section">
                         <div class="row">
                             <label>Where can this meet and greet be booked?</label>
@@ -77,7 +77,7 @@
                                 <span class="col-xs-12 col-sm-5 form-group">
                                     <label class="control-label sr-only">Hours</label>
                                     <div class="input-group">
-                                        <input id="serviceProfessionalServiceEditor-durationHours" type="number" class="form-control" min="0" step="1" placeholder="1"/>
+                                        <input id="serviceProfessionalServiceEditor-durationHours" type="number" class="form-control" min="0" step="1" placeholder="0"/>
                                         <span class="input-group-addon">hours</span>
                                     </div>
                                 </span>
@@ -94,6 +94,10 @@
                             <label class="control-label"><span>What can clients expect during the meet and greet?</span></label>
                             <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="Include anything the client needs to prepare for the meet and greet.">
                             </textarea>
+                        </div>  
+                        <div class="form-group">
+                            <label class="control-label"><span>What information about the client's dog(s) do you want to know?</span></label>
+                            <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number">Please let me know your dog's age, breed, size, temperament and what services you're interested in.</textarea>
                         </div>  
                     <div class="row">
                         <label class="control-label col-xs-12">My rates start at:</label>
