--- a/app/source/html/activities/prototypePsychotherapist.html
+++ b/app/source/html/activities/prototypePsychotherapist.html
@@ -32,17 +32,21 @@
                                      <option value="4">Certain clients only</option>
                                 </select>
                             </div>
-<!--
-                            <div class="select select-block ">
+                        </div>
+                    </div>
+                    <div class="LightForm-Section">
+                        <div class="row">
+                        <label>Which clients?</label>
+                            <div class="Select Select-block ">
                                 <select class="select-unstyled selectpicker">
                                         <option value="4">Joshua Danielson</option>
-                                        <option value="5">Iago Lorenzo</option>
+                                        <option value="5">Matt Schaefer</option>
                                         <option value="6">Juan Sanchez</option>
                                 </select>
                             </div>
--->
                         </div>
                     </div>
+<!--
                     <div class="LightForm-Section">
                         <div class="row">
                             <label>Where can this service be booked?</label>
@@ -66,6 +70,7 @@
                                 </div>
                         </div>
                     </div>
+-->
                     <div class="form-inline isolated">
                         <div class="form-group">
                             <label class="control-label">What's the price for this service?</label>
@@ -99,11 +104,13 @@
                             <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="Describe the Pyschotherapist services you'll provide">
                             </textarea>
                         </div>
+<!--
                         <div class="form-group">
                             <label class="control-label"><span>Are there any time restrictions for clients booking this service?</span></label>
                             <textarea class="form-control" id="serviceProfessionalServiceEditor-description" type="number" placeholder="e.g., Weekday mornings only">
                             </textarea>
                         </div>
+-->
                     <div class="LightForm-submitBar">
                         <button type="submit" class="btn btn-primary btn-block">Save</button>
                     </div>       
