--- a/app/source/html/activities/clientEditor.html
+++ b/app/source/html/activities/clientEditor.html
@@ -57,7 +57,28 @@
                             <select class="form-control" data-bind="value: birthMonthDay, options: $root.monthDays, optionsCaption: 'Birth Day (optional)', disable: $root.isLocked() || $root.isReadOnly(), valueAllowUnset: true"></select>
                         </div>
                         <textarea class="form-control" data-bind="textInput: notesAboutClient, disable: $root.isLocked" placeholder="Notes about client (only seen by you)"></textarea>
-                    </div>
+                    </div><h2 class="SectionTitle" data-bind="">
+                        <span data-bind="">What would you like to do?</span>
+                    </h2>
+                    <ul class="TilesList" data-bind="">
+                        <li>
+                            <a href="#" class="ItemTile" data-bind="" role="button">
+                                <div class="Tile-content" data-bind="">View/edit Joshua's special pricing</div>
+                                <p data-bind="">6 services</p>
+                                <div class="Tile-icon text-muted">
+                                 <span class="fa ion ion-ios-arrow-forward"></span>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="ItemTile" data-bind="" role="button">
+                                <div class="Tile-content text-muted" data-bind="">Add special pricing for Joshua</div>
+                                <div class="Tile-icon text-muted">
+                                 <span class="fa ion ion-plus"></span>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
                     <div class="LightForm-submitBar">
                         <button type="submit" class="btn btn-primary btn-block" data-bind="text: submitText, disable: $root.isLocked() || !unsavedChanges(), css: { 'btn-danger': isSaving() }"></button>
                         <button type="button" class="btn btn-danger btn-block" data-bind="text: deleteText, disable: $root.isLocked(), event: { click: confirmRemoval }, visible: !isNew()"></button>
